--- a/templates/chart.html
+++ b/templates/chart.html
@@ -47,7 +47,7 @@
 
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top p-0">
-        <a href="index.html" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
+        <a href="{% url 'index' %}" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
             <h1 class="m-0">Toxic Speech</h1>
         </a>
         <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
@@ -57,9 +57,8 @@
             <div class="navbar-nav ms-auto p-4 p-lg-0">
                 
                 <a href="{% url 'index' %}" class="nav-item nav-link">Home</a>
-                <a href="{% url 'upload' %}" class="nav-item nav-link active">Upload</a>
                 <a href="{% url 'toxic' %}" class="nav-item nav-link active">Prediction</a>
-                <a href="{% url 'performance' %}" class="nav-item nav-link ">Performance_analysis</a> 
+                <a href="{% url 'performance' %}" class="nav-item nav-link ">Performance Analysis</a> 
                 <a href="{% url 'chart' %}" class="nav-item nav-link">Chart</a>
                 <a href="{% url 'logout' %}" class="nav-item nav-link ">logout</a>
 				
