--- a/templates/login.html
+++ b/templates/login.html
@@ -48,7 +48,7 @@
 
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top p-0">
-        <a href="index.html" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
+        <a href="{% url 'index' %}" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
             <h1 class="m-0">Hate Speech</h1>
         </a>
         <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
@@ -57,8 +57,8 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <div class="navbar-nav ms-auto p-4 p-lg-0">
                <a href="{% url 'index' %}" class="nav-item nav-link">Home</a>
-                <a href="{% url 'login'%}" class="nav-item nav-link active">Login</a>
-				
+               <a href="{% url 'register' %}" class="nav-item nav-link active">Register</a>
+
             </div>
            
         </div>
@@ -214,7 +214,7 @@ background-image: url("{% static 'images/email3.jpg' %}");
     {% if success_message %}
     <script>
         alert("{{ success_message }}");
-        window.location.href = "{% url 'upload' %}"
+        window.location.href = "{% url 'toxic' %}"
     </script>
     {% endif %}
 </body>
