--- a/templates/performance.html
+++ b/templates/performance.html
@@ -47,7 +47,7 @@
 
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top p-0">
-        <a href="index.html" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
+        <a href="{% url 'index' %}" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
             <h1 class="m-0">Toxic Speech</h1>
         </a>
         <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
@@ -56,9 +56,8 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
 		  <div class="navbar-nav ms-auto p-4 p-lg-0">
             <a href="{% url 'index' %}" class="nav-item nav-link">Home</a>
-            <a href="{% url 'upload' %}" class="nav-item nav-link active">Upload</a>
             <a href="{% url 'toxic' %}" class="nav-item nav-link active">Prediction</a>
-            <a href="{% url 'performance' %}" class="nav-item nav-link ">Performance_analysis</a> 
+            <a href="{% url 'performance' %}" class="nav-item nav-link ">Performance Analysis</a> 
             <a href="{% url 'chart' %}" class="nav-item nav-link">Chart</a>
             <a href="{% url 'logout' %}" class="nav-item nav-link ">logout</a>
 
@@ -71,7 +70,7 @@
     <!-- Page Header Start -->
     <div class="container-fluid page-header py-5 mb-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container text-center py-5">
-            <h1 class="display-3 text-white mb-4 animated slideInDown">performance_analysis</h1>
+            <h1 class="display-3 text-white mb-4 animated slideInDown">Performance Analysis</h1>
             <nav aria-label="breadcrumb animated slideInDown">
              
             </nav>
@@ -85,7 +84,7 @@
         <div class="container">
             <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
                 <p class="fs-5 fw-bold text-primary">Toxic Speech</p>
-                <h1 class="display-5 mb-5">performance_analysis</h1>
+                <h1 class="display-5 mb-5">Performance Analysis</h1>
             </div>
            
 		    <body>
